--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
 
   <body>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
+    <header id="header">
+      <img id="header-img" src="https://www.google.fr/search?q=logo&rlz=1C5CHFA_enFR727FR727&tbm=isch&source=iu&ictx=1&fir=7pmDf_67bAH-XM%253A%252CK5PKoRNpKmPZOM%252C_&usg=AI4_-kTl3IQjH7YqR3y8d9KV9sougGJ_Nw&sa=X&ved=2ahUKEwjIxPeA1dHgAhVo1-AKHXIiC6wQ9QEwAHoECAUQBA#imgrc=7pmDf_67bAH-XM">
+      <nav id="nav-bar">
+      </nav>
+  </header>
 
     <!--
 
