--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
       <video id="video">
         <source src="https://www.youtube.com/watch?v=G8HWeQAe6lM">
       </video>
+      <form id="form">
+        <input id="email" placeholder="EMAIL" type=email>
+        <input id="submit" type=submit>
+      </form>
   </header>
 
     <!--
