--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>Fork Me! FCC: Test Suite Template</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" media="screen" href="css/style.css">
   </head>
 
   <body>
@@ -18,9 +18,9 @@
       <video id="video">
         <source src="https://www.youtube.com/watch?v=G8HWeQAe6lM">
       </video>
-      <form id="form">
-        <input id="email" placeholder="EMAIL" type=email>
-        <input id="submit" type=submit>
+      <form id="form" action="https://www.freecodecamp.com/email-submit" >
+        <input id="email" placeholder="EMAIL" name="email" type=email>
+        <input id="submit"  type=submit>
       </form>
   </header>
 
