--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>Fork Me! FCC: Test Suite Template</title>
-    <link rel="stylesheet" media="screen" href="css/style.css">
+    <link rel="stylesheet" media="screen" href="style.css">
   </head>
 
   <body>
@@ -23,7 +23,18 @@
         <input id="submit"  type=submit>
       </form>
   </header>
+    <style>
+      #body {
+        background-color: deeppink;
+      }
 
+      @media (min-width: 600px) {
+        #body {
+          background-color: lightpink;
+          display:flex;
+        }
+      }
+    </style>
     <!--
 
     Hello Camper!
