--- a/index.html
+++ b/index.html
@@ -1,52 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="UTF-8">
     <title>Fork Me! FCC: Test Suite Template</title>
-    <link rel="stylesheet" media="screen" href="style.css">
-  </head>
+    <link rel="stylesheet" href="css/style.css">
+</head>
 
-  <body>
-    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
-    <header id="header">
-      <img id="header-img" src="https://www.google.fr/search?q=logo&rlz=1C5CHFA_enFR727FR727&tbm=isch&source=iu&ictx=1&fir=7pmDf_67bAH-XM%253A%252CK5PKoRNpKmPZOM%252C_&usg=AI4_-kTl3IQjH7YqR3y8d9KV9sougGJ_Nw&sa=X&ved=2ahUKEwjIxPeA1dHgAhVo1-AKHXIiC6wQ9QEwAHoECAUQBA#imgrc=7pmDf_67bAH-XM">
-      <nav id="nav-bar">
-        <a class="nav-link" href="#header">PO</a>
-        <a class="nav-link" href="#header-img">TA</a>
-        <a class="nav-link" href="#nav-bar">TO</a>
-      </nav>
-      <video id="video">
-        <source src="https://www.youtube.com/watch?v=G8HWeQAe6lM">
-      </video>
-      <form id="form" action="https://www.freecodecamp.com/email-submit" >
-        <input id="email" placeholder="EMAIL" name="email" type=email>
-        <input id="submit"  type=submit>
-      </form>
-  </header>
-    <style>
-      #body {
-        background-color: deeppink;
-      }
+<body>
+<script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 
-      @media (min-width: 600px) {
-        #body {
-          background-color: lightpink;
-          display:flex;
-        }
-      }
-    </style>
-    <!--
-
-    Hello Camper!
-
-    For now, the test suite only works in Chrome!
-    Please read the README below in the JS Editor before beginning.
-    Feel free to delete this message once you have read it.
-    Good luck and Happy Coding!
-
-    - The freeCodeCamp Team
-
-    -->
-    <script  src="js/index.js"></script>
-  </body>
+<!--
+Hello Camper!
+For now, the test suite only works in Chrome!
+Please read the README below in the JS Editor before beginning.
+Feel free to delete this message once you have read it.
+Good luck and Happy Coding!
+- The freeCodeCamp Team
+-->
+<script  src="js/index.js"></script>
+</body>
 </html>
+
+28  js/index.js
